fix feedurl too long style

--- a/src/app/pages/feeds/bindservice/scanqrcode/scanqrcode.page.scss
+++ b/src/app/pages/feeds/bindservice/scanqrcode/scanqrcode.page.scss
@@ -23,7 +23,7 @@
     color: #8888b0;
     margin-bottom: 5px;
     word-wrap:break-word;  
-    word-break:break-all; 
+    // word-break:break-all; 
 }
 
 .three{
